--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chat-bot",
+  "name": "CV-Bot",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://GuilhermeMarcon.github.io/CV-Bot",
